# fastpelt

./: .gitignore  Cargo.toml  Makefile  README.md  build-wheels.sh  setup.py  signal.txt
examples/: cmp.ipynb
fastpelt/: __init__.py
fastpelt-python/: Cargo.toml  setup.py
fastpelt-python/src/: lib.rs
pelt-rs/: Cargo.toml
pelt-rs/src/: alg.rs  cost.rs  estimator.rs  lib.rs
src/: consts.rs  cost.rs  estimator.rs  lib.rs  pelt.rs
